--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:background="@color/black"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,82 +20,100 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        app:layout_constraintBottom_toBottomOf="@+id/imageLayout">
-
-        <com.facebook.share.widget.ShareButton
-            android:id="@+id/shareBtn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/takePhotoBtn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="pick image"
-            android:textColor="@color/purple_500" />
-    </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/imageLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_300sdp"
-            android:scaleType="fitXY"
-            android:src="@drawable/test" />
-
+        android:layout_height="match_parent">
         <LinearLayout
+            android:layout_alignParentBottom="true"
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
-            android:background="#E0000000"
+            android:gravity="center"
             android:orientation="horizontal"
-            android:weightSum="3">
+            android:weightSum="2"
+            app:layout_constraintBottom_toBottomOf="@+id/imageLayout">
 
-            <TextView
-                android:id="@+id/cityName"
+            <com.facebook.share.widget.ShareButton
+                android:id="@+id/shareBtn"
                 android:layout_width="0dp"
-                android:layout_gravity="center"
-                android:gravity="center"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_location"
-                android:textColor="@color/white" />
+                android:layout_weight="1" />
 
-            <TextView
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:id="@+id/temp"
-                android:drawableLeft="@drawable/ic_temp"
+            <Button
+                android:id="@+id/takePhotoBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:id="@+id/humidity"
-                android:drawableLeft="@drawable/ic_lhumidity"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textColor="@color/white" />
+                android:backgroundTint="@color/white"
+                android:text="pick image"
+                android:textColor="@color/purple_500" />
         </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="History"
+            android:textColor="@color/white"
+            android:layout_below="@id/imageLayout"
+            android:gravity="center"
+            android:layout_margin="@dimen/_5sdp"
+            android:textSize="@dimen/_15sdp"
+            android:id="@+id/histroyTextView"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/histroyRV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/histroyTextView"
+            android:layout_above="@id/linearLayout"/>
+        <RelativeLayout
+            android:id="@+id/imageLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true">
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_300sdp"
+                android:scaleType="fitXY"
+                android:src="@drawable/defualt" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"
+                android:background="#70000000"
+                android:orientation="horizontal"
+                android:weightSum="3">
 
-</RelativeLayout>
+                <TextView
+                    android:id="@+id/cityName"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_location"
+                    android:gravity="center"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/temp"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_temp"
+                    android:gravity="center"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/humidity"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_lhumidity"
+                    android:gravity="center"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+        </RelativeLayout>
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
