--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:layout_gravity="center"
     android:gravity="center"
+    android:background="@color/white"
     tools:context=".view.SplashScreenActivity">
 
     <com.airbnb.lottie.LottieAnimationView
